--- a/.github/workflows/post.yml
+++ b/.github/workflows/post.yml
@@ -30,6 +30,8 @@ jobs:
         run: |
           git config --global user.email "actions@github.com"
           git config --global user.name "GitHub Actions"
+          git remote set-url origin https://x-access-token:${{ secrets.GH_TOKEN }}@github.com/${{ github.repository }}
           git add _posts/
           git commit -m "🤖 Auto-post: $(date '+%Y-%m-%d %H:%M:%S')" || echo "No changes"
-          git push
+          git push origin main
+
