--- a/.github/workflows/post.yml
+++ b/.github/workflows/post.yml
@@ -26,6 +26,9 @@ jobs:
           NEWS_API_KEY: ${{ secrets.NEWS_API_KEY }}
           COUPANG_PARTNER_ID: ${{ secrets.COUPANG_PARTNER_ID }}
 
+      - name: 🔍 Debug token
+        run: echo "GH_TOKEN is ${{ secrets.GH_TOKEN }}"
+
       - name: Commit and push
         run: |
           git config --global user.email "actions@github.com"
