--- a/.github/workflows/post.yml
+++ b/.github/workflows/post.yml
@@ -35,17 +35,14 @@ jobs:
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
-
-          # 깃 인증을 위한 Askpass 스크립트 생성
-          echo "echo ${GH_TOKEN}" > askpass.sh
-          chmod +x askpass.sh
-          export GIT_ASKPASS=$PWD/askpass.sh
-
-          # remote 설정
-          git remote set-url origin https://github.com/${{ github.repository }}
+      
+          # ✅ remote URL에 PAT 삽입 (핵심)
+          git remote set-url origin https://x-access-token:${GH_TOKEN}@github.com/daegweon/daegweon.github.io.git
+      
           git add _posts/
           git commit -m "🤖 Auto-post: $(date '+%Y-%m-%d %H:%M:%S')" || echo "No changes"
           git push origin main
+
 
 
 
