--- a/.github/workflows/post.yml
+++ b/.github/workflows/post.yml
@@ -34,5 +34,5 @@ jobs:
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           
           git add _posts/
-          git commit -m "🤖 Auto-post: $(date '+%Y-%m-%d %H:%M:%S')" || echo "No changes"
+          git commit -m "🤖 Auto-post: $(TZ=Asia/Seoul date '+%Y-%m-%d %H:%M:%S')" || echo "No changes"
           git push origin main
